force-app/main/default/objects/NI_CustomizationDetailToService__c/NI_CustomizationDetailToService__c.object-meta.xml
<CustomObject>
    <description>HRM Customization Object</description>
    <label>Work Hour Allocation</label>
    <nameField>
        <displayFormat>D2S{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Hour Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>