force-app/main/default/objects/NI_CustomizationDetailToService__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The completed date should fall within the selected starting and ending service hour period.</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>