force-app/main/default/objects/NI_CustomizationDetailToService__c/fields/Detail_Subject__c.field-meta.xml
<CustomField>
    <fullName>Detail_Subject__c</fullName>
    <formula>Detail__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail Subject</label>
    <type>Text</type>
</CustomField>