force-app/main/default/objects/NI_CustomizationDetailToService__c/fields/Period_Starting__c.field-meta.xml
<CustomField>
    <fullName>Period_Starting__c</fullName>
    <formula>Service__r.Period_Starting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Starting</label>
    <type>Date</type>
</CustomField>