force-app/main/default/objects/NI_CustomizationDetailToService__c/validationRules/Actual_Hours_Value_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Hours_Value_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>Actual hours value needs to exceed 0.5</description>
    <errorConditionFormula>AND(NOT(Actual_Hours__c &gt; 0))</errorConditionFormula>
    <errorDisplayField>Actual_Hours__c</errorDisplayField>
    <errorMessage>Please enter an Actual Hours value greater than zero.</errorMessage>
</ValidationRule>