force-app/main/default/objects/NI_CustomizationDetailToService__c/validationRules/Actual_Hours_Value_Validator.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Hours_Value_Validator</fullName>
    <active>true</active>
    <description>Actual hours can only be entered in values divisible by 0.5</description>
    <errorConditionFormula>AND(NOT( MOD(Actual_Hours__c, 0.5) = 0))</errorConditionFormula>
    <errorDisplayField>Actual_Hours__c</errorDisplayField>
    <errorMessage>Actual Hours entered must be divisible by a half an hour only. (0.5)</errorMessage>
</ValidationRule>