force-app/main/default/objects/NI_CustomizationDetailToService__c/validationRules/Not_Enough_Hours_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Enough_Hours_Available</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
    Actual_Hours__c &gt; Service__r.Time_Units_Balance__c,
    IsRunningTest__c = false
)</errorConditionFormula>
    <errorDisplayField>Actual_Hours__c</errorDisplayField>
    <errorMessage>Service time balance is too low and is not enough to cover the actual hours entered.</errorMessage>
</ValidationRule>